# template_cmake_projects

./: README.md
Project_Template_To_Use/: CMakeLists.txt
Project_Template_To_Use/Main/: CMakeLists.txt  main.cpp
Project_Template_To_Use/libs/Logger/: CMakeLists.txt
cmake_larger_projects.tutorial/: CMakeLists.txt
cmake_larger_projects.tutorial/examples/: CMakeLists.txt  main.cpp
cmake_larger_projects.tutorial/include/formatCpp/: formatCpp.h
cmake_project_subprojects_templates/: CMakeLists.txt  READMe
cmake_project_subprojects_templates/Main/: CMakeLists.txt  main.cpp
cmake_project_subprojects_templates/libs/RenameMe/: CMakeLists.txt
cmake_project_subprojects_templates/libs/RenameMe/include/RenameMe/: test.h
cmake_project_subprojects_templates/libs/library1/: CMakeLists.txt
cmake_project_subprojects_templates/libs/library2/: CMakeLists.txt
third_party_libraries_templates/: CMakeLists.txt
